# ParCSPI

./: LICENSE  README.md
data_analysis/: 2sec.py  baseline_pi.py  cost_score_data.txt  main.py  overhead.py  sec_score.py
log_lib/: compile.sh  log_lib.bc  log_lib.c  log_lib.ll  pac_check_lib.bc  pac_check_lib.c
program_analysis/pac-svf/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake
program_analysis/pac-svf/include/DDA/: ContextDDA.h  DDAPass.h  DDAVFSolver.h
program_analysis/pac-svf/include/Graphs/: PTACallGraph.h
program_analysis/pac-svf/include/Util/: DPItem.h  SVFBasicTypes.h  config.h
program_analysis/pac-svf/lib/: Makefile  cmake_install.cmake
program_analysis/pac-svf/lib/DDA/: ContextDDA.cpp  DDAPass.cpp
program_analysis/pac-svf/tools/: CMakeLists.txt  Makefile  cmake_install.cmake
program_analysis/pac-svf/tools/CFL/: Makefile  cmake_install.cmake
program_analysis/pac-svf/tools/DDA/: Makefile  cmake_install.cmake
program_analysis/pac-svf/tools/Example/: Makefile  cmake_install.cmake
program_analysis/pac-svf/tools/MTA/: Makefile  cmake_install.cmake
program_analysis/pac-svf/tools/PAC_ANALYSIS/: CMakeLists.txt  Makefile  common.h  csdda.cpp  csdda.h  dependency_walker.cpp  dependency_walker.h  instrumenter_loger.cpp  instrumenter_loger.h  pac_analysis.cpp  pac_analysis.h
program_analysis/pac-svf/tools/PAC_ENFORCE/: CMakeLists.txt  cmake_install.cmake  common.h  pac_enforce.cpp  pac_enforce.h
program_analysis/pac-svf/tools/SABER/: Makefile  cmake_install.cmake
program_analysis/pac-svf/tools/WPA/: Makefile  cmake_install.cmake
test/: run.sh
test/test_target/eval/evaluation/: main.c
test/test_target/eval/evaluation/src/sample_program/: binary.bc.opt  binary.inst.bc  bti_cost_data.txt  cost_score_data.txt  demorun  optimal_policy.txt  pac_log_du.txt  pac_log_pt.txt  pac_log_str_pt.txt  pacgen_main.c  pacgen_main.ll  protected_bin  sample_program.c  sample_program.ll  single.bc
test/test_target/eval/evaluation/src/sample_program/trace/: output.txt1
